# docker-gemini2mqtt

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ai_client.py  config.py  docker-compose-vertexapi.yml  docker-compose.yml  gemini2mqtt.py  main.py  mqtt_client.py  pyproject.toml  requirements.txt  spec.md  task_manager.py
.github/workflows/: docker-publish.yml
tests/: conftest.py  test_ai_client.py  test_app.py  test_config.py  test_e2e.py  test_gemini2mqtt.py  test_mqtt_client.py  test_task_manager.py
